--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <main>
       <section class="fadein section1">
           <h2><span>「こだわり」</span>を伝える。</h2>
-          <p>"素晴らしいWEBサイト"とは、<br>細部まで作り込まれたモノでも、<br>目まぐるしく動くモノでもなく、<br>伝えたいことが伝わるモノ。<br><br>徹底した双方のコミュニケーションのもと、<br>本当に伝えたいこと、「こだわり」を伝えます。</p>
+          <p>"素晴らしいWEBサイト"とは、<br>細部まで作り込まれたモノでも、<br>目まぐるしく動くモノでもなく、<br>伝えたいことが伝わるモノ。<br><br>徹底した双方のコミュニケーションのもと、本当に伝えたいこと、「こだわり」を伝えます。</p>
       </section>
 
       <section class="fadein">
