--- a/index.html
+++ b/index.html
@@ -119,12 +119,12 @@
     <main>
       <section class="fadein section1">
           <h2><span>「こだわり」</span>を伝える。</h2>
-          <p>"素晴らしいWEBサイト"とは、<br>細部まで作り込まれたモノでも、<br>目まぐるしく動くモノでもなく、<br>伝えたいことが伝わるモノ。<br><br>徹底した双方のコミュニケーションのもと、本当に伝えたいこと、「こだわり」を伝えます。</p>
+          <p>"素晴らしいWEBサイト"とは、<br>細部まで作り込まれたモノでも、<br>目まぐるしく動くモノでもなく、<br>伝えたいことが伝わるモノ。<br><br>徹底した双方のコミュニケーションのもと、本当に伝えたいこと、<br><br>「こだわり」を伝えます。</p>
       </section>
 
       <section class="fadein">
           <h2><span>「目的」</span>を見据える。</h2>
-          <p>WEB制作はあくまで手段でしかなく、<br>本質はその先の目的を達成すること。<br><br>認知度をあげたいのか、購入率をあげたいのか、信頼に足ることを示したいのか。それぞれの目的に適切なWEBサイトが必ずある。<br><br>それを見極め、本当に成し遂げたいことを達成するお手伝いをします。</p>
+          <p>WEB制作はあくまで手段でしかなく、本質はその先の目的を達成すること。<br><br>認知度をあげたいのか、購入率をあげたいのか、信頼に足ることを示したいのか。それぞれの目的に適切なWEBサイトが必ずあります。<br><br>それを見極め、本当に成し遂げたいことを達成するお手伝いをします。</p>
       </section>
 
 
