--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
-    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/animation.css">
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- jQuery UI -->
@@ -50,8 +50,7 @@
 
       <!-- タイトル -->
       <h4 class="fadeout">TOMOYA SATO</h4>
-
-
+      <div class="down fadeout"><i class="fas fa-caret-down"></i></div>
       <!-- 右メニュー -->
       <ul class="nav2 fadein2">
         <li><a class="scrollTop" href="">TOMOYA SATO</a></li>
@@ -109,7 +108,7 @@
         <div class="center2 example5"></div>
         <div class="modal__content contact">
           <p>KEEP IN TOUCH !</p>
-          <a class="email" href="mailto:tomoya.sato.contact@gmail.com"><span>Mail:</span> tomoya.sato.contact@gmail.com</a>
+          <a class="email" href="mailto:tomoya.sato.contact@gmail.com"><span>Mail:</span> tomoya.sato.contact[at]gmail.com</a>
         </div>
       </div>
 
@@ -141,7 +140,7 @@
           </tr>
           <tr>
             <td>Mail </td>
-            <td>tomoya.sato.contact@gmail.com</td>
+            <td>tomoya.sato.contact[at]gmail.com</td>
           </tr>
           <tr>
             <td>Site </td>
@@ -162,7 +161,7 @@
 
       <section class="fadein section4">
         <h1>お問い合わせ</h1>
-        <p>Mail： tomoya.sato.contact@gmail.com</p>
+        <p>Mail： tomoya.sato.contact[at]gmail.com</p>
       </section>
     </main>
 
@@ -170,8 +169,10 @@
     <!-- フッター -->
     <footer class="scrollTop">
       <div><i class="fas fa-sort-up bounce"></i></div>
+      <p>PAGE TOP</p>
     </footer>
     
     <script src="js/script.js"></script>
+
   </body>
 </html>
