fix loading animation

--- a/index.html
+++ b/index.html
@@ -22,8 +22,23 @@
   </head>
   <body class="selecter">
 
-    <header>
+      <!-- ローディング画面 -->
+      <div id="loading">
+        <div class="breeding-rhombus-spinner">
+          <div class="rhombus child-1"></div>
+          <div class="rhombus child-2"></div>
+          <div class="rhombus child-3"></div>
+          <div class="rhombus child-4"></div>
+          <div class="rhombus child-5"></div>
+          <div class="rhombus child-6"></div>
+          <div class="rhombus child-7"></div>
+          <div class="rhombus child-8"></div>
+          <div class="rhombus big"></div>
+        </div>
+      </div>
 
+
+    <header>
       <!-- 左上の目次メニュー -->
       <ul class="nav1 fadein2">
         <li><a class="scroll1" href="">こだわり</a></li>
@@ -50,7 +65,7 @@
 
       <!-- タイトル -->
       <h4 class="fadeout">TOMOYA SATO</h4>
-      <div class="down fadeout"><i class="fas fa-caret-down"></i></div>
+      <div class="down fadeout scrollDown"><i class="fas fa-caret-down"></i></div>
       <!-- 右メニュー -->
       <ul class="nav2 fadein2">
         <li><a class="scrollTop" href="">TOMOYA SATO</a></li>
