--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
     <script src="js/raindrops.js"></script>
-
+    <!-- slick -->
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css"/>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
+    
     <title>TOMOYA SATO</title>
   </head>
   <body class="selecter">
@@ -69,8 +72,9 @@
       <!-- 右メニュー -->
       <ul class="nav2 fadein2">
         <li><a class="scrollTop" href="">TOMOYA SATO</a></li>
-        <li><a href="" class="js-modal-open2">CONTACT</a></li>
-        <li><a href="" class="js-modal-open1">ME</a></li>
+        <li><a href="#" class="js-modal-open2">CONTACT</a></li>
+        <li><a href="#" class="js-modal-open3">WORK</a></li>
+        <li><a href="#" class="js-modal-open1">ME</a></li>
       </ul>
       <div class="center" id="example6"></div>
       <div class="light-blue"></div>
@@ -127,6 +131,31 @@
         </div>
       </div>
 
+      <!-- 右メニューモーダル WORK -->
+      <div class="modal js-modal3">
+
+        <!-- 背景 -->
+        <div class="modal__bg js-modal-close3">
+          <a class="js-modal-close3 close" href="">×</a>
+        </div>
+
+        <!-- スライド -->
+        <div class="slide-area">
+          <ul class="slick01">
+            <li><div class="box box1"></div></li>
+            <li><div class="box box2"></div></li>
+            <li><div class="box box3"></div></li>
+            <li><div class="box box4"></div></li>
+          </ul>
+        </div>
+
+        <!-- 下半分 -->
+        <div class="center2 example5"></div>
+        <div class="modal__content work">
+        </div>
+
+
+      </div>
     </header>
 
     <!-- メインセクション -->
@@ -187,6 +216,10 @@
       <p>PAGE TOP</p>
     </footer>
     
+
+
+
+
     <script src="js/script.js"></script>
 
   </body>
