--- a/index.html
+++ b/index.html
@@ -141,19 +141,55 @@
 
         <!-- スライド -->
         <div class="slide-area">
-          <ul class="slick01">
-            <li><div class="box box1"></div></li>
-            <li><div class="box box2"></div></li>
-            <li><div class="box box3"></div></li>
-            <li><div class="box box4"></div></li>
+          <ul class="slick01" id="mainSlide">
+            <li>
+              <a href="#"><img src="img/TOMOYA_SATO.png"></a>
+            </li>
+            <li>
+              <a href="#"><img src="img/Yogurt_Shop.png"></a>
+            </li>
+            <li>
+              <a href="#"><img src="img/Yogurt_Shop.png"></a>
+            </li>
           </ul>
+          <ul class="slick02">
+            <li>
+              <a href="#"><img src="img/TOMOYA_SATO.png"></a>
+            </li>
+            <li>
+              <a href="#"><img src="img/Yogurt_Shop.png"></a>
+            </li>
+            <li>
+              <a href="#"><img src="img/Yogurt_Shop.png"></a>
+            </li>
+          </ul>
+        </div>
+        <div id="arrows">
+          <div class="prev slick-prev"><i class="fas fa-chevron-left"></i></div>
+          <div class="next slick-next"><i class="fas fa-chevron-right"></i></div>
         </div>
 
         <!-- 下半分 -->
         <div class="center2 example5"></div>
         <div class="modal__content work">
+          <ul class="slick03">
+            <li>
+              <p>こちらは、私のポートフォリオサイトです。</p>
+              <p>シンプルなデザインを意識し、中央の波打つアニメーションで印象に残るデザインにしました。また、色のトーンを統一することで、落ち着いた雰囲気を演出しています。</p>
+              <a href="http://satomomo.com/" target="_blank">TOMOYA SATO</a>
+            </li>
+            <li>
+              <p>こちらは、株式会社YogurtShop(架空の会社)のオープニングLPです。</p>
+              <p>お洒落でヨーロピアンな雰囲気のお店をイメージできるようなデザインを意識しました。グレーを基調に、背景を白ではなく、青みがかった白を用いることで、きれいにまとめています。</p>
+              <a href="https://satomomo0222.github.io/yogurt-shop/" target="_blank">Yogurt Shop</a>
+            </li>
+            <li>
+              <p>こちらは、株式会社YogurtShop(架空の会社)のオープニングLPです。</p>
+              <p>お洒落でヨーロピアンな雰囲気のお店をイメージできるようなデザインを意識しました。グレーを基調に、背景を白ではなく、青みがかった白を用いることで、きれいにまとめています。</p>
+              <a href="https://satomomo0222.github.io/yogurt-shop/" target="_blank">Yogurt Shop</a>
+            </li>
+          </ul>
         </div>
-
 
       </div>
     </header>
