--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
         <!-- スライド -->
         <div class="slide-area">
-          <ul class="slick01" id="mainSlide">
+          <ul class="slider slick01" id="mainSlide">
             <li>
               <a href="#"><img src="img/TOMOYA_SATO.png"></a>
             </li>
@@ -152,7 +152,7 @@
               <a href="#"><img src="img/Yogurt_Shop.png"></a>
             </li>
           </ul>
-          <ul class="slick02">
+          <ul class="slider slick02">
             <li>
               <a href="#"><img src="img/TOMOYA_SATO.png"></a>
             </li>
@@ -172,7 +172,7 @@
         <!-- 下半分 -->
         <div class="center2 example5"></div>
         <div class="modal__content work">
-          <ul class="slick03">
+          <ul class="slider slick03">
             <li>
               <p>こちらは、私のポートフォリオサイトです。</p>
               <p>シンプルなデザインを意識し、中央の波打つアニメーションで印象に残るデザインにしました。また、色のトーンを統一することで、落ち着いた雰囲気を演出しています。</p>
