--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
           </tr>
           <tr>
             <td>Site </td>
-            <td></td>
+            <td><a href="http://satomomo.com/">satomomo.com</a></td>
           </tr>
         </table>
       </section>
